# GeneticPainter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  main.cpp
GeneticAlgorithm/: CMakeLists.txt  Doxyfile
GeneticAlgorithm/doc/: doxygen_sqlite3.db
GeneticAlgorithm/doc/html/: GenotypeCreator_8hpp_source.html  Genotype_8hpp_source.html  PopulationCreator_8hpp_source.html  Population_8hpp_source.html  annotated.html  classGenotype-members.html  classGenotype.html  classGenotypeCreator-members.html  classGenotypeCreator.html  classPopulation-members.html  classPopulation.html  classPopulationCreator-members.html  classPopulationCreator.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  index.html
GeneticAlgorithm/doc/html/search/: all_1.js  classes_0.js  classes_1.js  functions_0.js  search.js  typedefs_0.js  typedefs_1.js
GeneticAlgorithm/doc/latex/: annotated.tex  classGenotype.tex  classGenotypeCreator.tex  classPopulation.tex  classPopulationCreator.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex
GeneticAlgorithm/include/: CrossoverStrategy.hpp  Evaluator.hpp  Genotype.hpp  GenotypeCreator.hpp  GenotypeInitializer.hpp  MutationStrategy.hpp  Population.hpp  PopulationCreator.hpp  PopulationInitializer.hpp
GeneticAlgorithm/src/: Genotype.cpp  PopulationCreator.cpp
GeneticAlgorithm/test/: GenotypeCreatorTest.cpp  GenotypeTest.cpp  GenotypeTests.cpp  PopulationCreatorTest.cpp  PopulationTest.cpp  mainTests.cpp
include/: Color.hpp  Ellipse.h  Ellipse.hpp  EllipseCreator.h  EllipseEvaluator.hpp  EllipseGenerator.hpp  EllipseInitializer.hpp  EllipseSelectionStrategy.hpp  EllipseSorter.hpp  EllipsesBreedingOperator.hpp  EllipsesCrossoverOperator.hpp  EllipsesCrossoverStrategy.hpp  EllipsesEliminationStrategy.hpp  EllipsesEvaluator.hpp  EllipsesGenotype.hpp  EllipsesGenotypeInitializer.hpp  EllipsesInitializer.hpp  EllipsesMutationFunctors.hpp  EllipsesMutationStrategy.hpp  EllipsesRenderer.hpp  EllipsesSelectionStrategy.hpp  EllipsesSizeComparator.hpp  EllipsesSizeComperator.hpp  EvolvingStatusSerializer.hpp  Genotype.hpp  ImageComparator.hpp  ImageSimilarityEvaluator.h  Vector2.hpp
src/: Ellipse.cpp  EllipseCreator.cpp  EllipseEvaluator.cpp  EllipseGenerator.cpp  EllipseInitializer.cpp  EllipseSelectionStrategy.cpp  EllipseSorter.cpp  EllipsesBreedingOperator.cpp  EllipsesCrossoverOperator.cpp  EllipsesCrossoverStrategy.cpp  EllipsesEliminationStrategy.cpp  EllipsesEvaluator.cpp  EllipsesGenotypeInitializer.cpp  EllipsesInitializer.cpp  EllipsesMutationFunctors.cpp  EllipsesMutationStrategy.cpp  EllipsesRenderer.cpp  EllipsesSelectionStrategy.cpp  EllipsesSizeComparator.cpp  EllipsesSizeComperator.cpp  Genotype.cpp  ImageComparator.cpp  ImageSimilarityEvaluator.cpp
tests/: ColorTest.cpp  ColorTests.cpp  EllipseTest.cpp  EllipseTests.cpp  EllipsesCrossoverOperatorTest.cpp  GenotypeTests.cpp  ImageComparatorTest.cpp  MutationFunctorsTests.cpp  Vector2Tests.cpp  main.cpp
